# esp32-weather-display

./: .gitignore  README.md  nvs-template.csv
.github/workflows/: build.yml  release.yml  test.yml
boards/: lilygo-ttgo-t5-47.cfg
main/: CMakeLists.txt  esp32-weather-display.c  graphics.c  graphics.h  idf_component.yml  text.c  weather.c  weather.h
